Fixed background blur issue on Safari

--- a/css/contact.css
+++ b/css/contact.css
@@ -115,6 +115,7 @@
     width: 100%;
     height: 100%;
     backdrop-filter: blur(4rem);
+    -webkit-backdrop-filter: blur(4rem);
     background-color: rgba(255,255,255,.2);
 
     display: flex;
@@ -480,13 +481,6 @@ textarea{
 
     .Lightbox-wrapper{
         width: 80%;
-    }
-
-    .Lightbox{
-        width: 100%;
-        height: 100%;
-        backdrop-filter: blur(4rem);
-        background-color: white;
     }
 } 
 /* ――――――――― Media Querys - 600px――――――――― */
